compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__imports__unqualified_using_private_constructor_pattern.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 163
expression: "import one.{Two}\n\npub fn main(x) {\n  let Two = x\n}"
---
----- SOURCE CODE
-- one.rakun
record Two { Two }

-- main.rakun
import one.{Two}

pub fn main(x) {
  let Two = x
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.rakun:1:13
  │
1 │ import one.{Two}
  │             ^^^

The module `one` does not have a `Two` value.

error: Unknown variable
  ┌─ /src/one/two.rakun:4:7
  │
4 │   let Two = x
  │       ^^^

The name `Two` is not in scope here.
